--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           >
           <br />
           * 본 사이트는 Chrome 에 최적화되어 있습니다. <br />
-          * 해당 사이트와 관련한 문제가 있을시 jwy7254@gmail.com 으로 연락주시면
+          * 해당 사이트와 관련하여 문제가 있을시 jwy7254@gmail.com 으로 연락주시면
           감사하겠습니다.
         </p>
         <button class="popup-close">창닫기</button>
